--- a/index.html
+++ b/index.html
@@ -1,47 +1,47 @@
 <!doctype html>
 <html>
-<head lang="en">
+<head lang="ja">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	
-	<title>MUNTER - Free Bootstrap 3 One Page Theme</title> 
-	<meta name="description" content="BlackTie.co - Free Handsome Bootstrap Themes" />	    
-	<meta name="keywords" content="themes, bootstrap, free, templates, bootstrap 3, freebie,">
+
+	<title>吉井のHTML</title>
+	<meta name="description" content="BlackTie.co - Free Handsome Bootstrap Themes" />
+	<meta name="keywords" content="吉井, 吉井惇, sunao yoshii">
 	<meta property="og:title" content="">
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="fancybox/jquery.fancybox-v=2.1.5.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/font-awesome.min.css" rel="stylesheet">
-	
-	<link rel="stylesheet" type="text/css" href="css/style.css">	
-	
+
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 	<link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,600,300,200&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-	
-	
+
+
 	<link rel="prefetch" href="images/zoom.png">
-		
+
 </head>
 
 <body>
 	<div class="navbar navbar-fixed-top" data-activeslide="1">
 		<div class="container">
-		
+
 			<!-- .navbar-toggle is used as the toggle for collapsed navbar content -->
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			
-			
+
+
 			<div class="nav-collapse collapse navbar-responsive-collapse">
 				<ul class="nav row">
 					<li data-slide="1" class="col-12 col-sm-2"><a id="menu-link-1" href="#slide-1" title="Next Section"><span class="icon icon-home"></span> <span class="text">HOME</span></a></li>
-					<li data-slide="2" class="col-12 col-sm-2"><a id="menu-link-2" href="#slide-2" title="Next Section"><span class="icon icon-user"></span> <span class="text">ABOUT US</span></a></li>
-					<li data-slide="3" class="col-12 col-sm-2"><a id="menu-link-3" href="#slide-3" title="Next Section"><span class="icon icon-briefcase"></span> <span class="text">PORTFOLIO</span></a></li>
+					<li data-slide="2" class="col-12 col-sm-2"><a id="menu-link-2" href="#slide-2" title="Next Section"><span class="icon icon-user"></span> <span class="text">ABOUT </span></a></li>
+					<li data-slide="3" class="col-12 col-sm-2"><a id="menu-link-3" href="#slide-3" title="Next Section"><span class="icon icon-briefcase"></span> <span class="text">写真</span></a></li>
 					<li data-slide="4" class="col-12 col-sm-2"><a id="menu-link-4" href="#slide-4" title="Next Section"><span class="icon icon-gears"></span> <span class="text">PROCESS</span></a></li>
-					<li data-slide="5" class="col-12 col-sm-2"><a id="menu-link-5" href="#slide-5" title="Next Section"><span class="icon icon-heart"></span> <span class="text">CLIENTS</span></a></li>
-					<li data-slide="6" class="col-12 col-sm-2"><a id="menu-link-6" href="#slide-6" title="Next Section"><span class="icon icon-envelope"></span> <span class="text">CONTACT</span></a></li>
+					<li data-slide="5" class="col-12 col-sm-2"><a id="menu-link-5" href="#slide-5" title="Next Section"><span class="icon icon-heart"></span> <span class="text">その他</span></a></li>
+					<li data-slide="6" class="col-12 col-sm-2"><a id="menu-link-6" href="#slide-6" title="Next Section"><span class="icon icon-envelope"></span> <span class="text">吉井に</span></a></li>
 				</ul>
 				<div class="row">
 					<div class="col-sm-2 active-menu"></div>
@@ -49,8 +49,8 @@
 			</div><!-- /.nav-collapse -->
 		</div><!-- /.container -->
 	</div><!-- /.navbar -->
-	
-	
+
+
 	<!-- === Arrows === -->
 	<div id="arrows">
 		<div id="arrow-up" class="disabled"></div>
@@ -58,8 +58,8 @@
 		<div id="arrow-left" class="disabled visible-lg"></div>
 		<div id="arrow-right" class="disabled visible-lg"></div>
 	</div><!-- /.arrows -->
-	
-	
+
+
 	<!-- === MAIN Background === -->
 	<div class="slide story" id="slide-1" data-slide="1">
 		<div class="container">
@@ -78,7 +78,7 @@
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /slide1 -->
-	
+
 	<!-- === Slide 2 === -->
 	<div class="slide story" id="slide-2" data-slide="2">
 		<div class="container">
@@ -115,14 +115,14 @@
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /slide2 -->
-	
+
 	<!-- === SLide 3 - Portfolio -->
 	<div class="slide story" id="slide-3" data-slide="3">
 		<div class="row">
 			<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href=""><img class="thumb" src="" alt=""></a></div>
 		</div><!-- /row -->
 	</div><!-- /slide3 -->
-	
+
 	<!-- === Slide 4 - Process === -->
 	<div class="slide story" id="slide-4" data-slide="4">
 		<div class="container">
@@ -168,7 +168,7 @@
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /slide4 -->
-	
+
 	<!-- === Slide 5 === -->
 	<div class="slide story" id="slide-5" data-slide="5">
 		<div class="container">
@@ -194,7 +194,7 @@
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /slide5 -->
-	
+
 	<!-- === Slide 6 / Contact === -->
 	<div class="slide story" id="slide-6" data-slide="6">
 		<div class="container">
@@ -235,7 +235,7 @@
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /Slide 6 -->
-	
+
 </body>
 
 	<!-- SCRIPTS -->
@@ -246,13 +246,13 @@
 	<script src="js/jquery.easing.1.3.js"></script>
 	<script type="text/javascript" src="fancybox/jquery.fancybox.pack-v=2.1.5.js"></script>
 	<script src="js/script.js"></script>
-	
+
 	<!-- fancybox init -->
 	<script>
 	$(document).ready(function(e) {
 		var lis = $('.nav > li');
 		menu_focus( lis[0], 1 );
-		
+
 		$(".fancybox").fancybox({
 			padding: 10,
 			helpers: {
@@ -261,7 +261,7 @@
 				}
 			}
 		});
-	
+
 	});
 	</script>
 
